2002-01-03  Darin Adler  <darin@bentspoon.com>

	* libnautilus-private/nautilus-global-preferences.c:
	(nautilus_global_preferences_init):
	Remove some smooth-font related stuff to get rid of the
	dependency on EelFontManager.

	* TODO: Quick update.

2002-01-03  Darin Adler  <darin@bentspoon.com>

	* test/test.c: (test_text_caption_get_text_as_int):
	Don't use the eel_eat function.

2002-01-03  Darin Adler  <darin@bentspoon.com>

	* Makefile.am: Turn on test subdirectory.
	* test/test.c: (test_init), (test_label_new):
	* test/test.h:
	Build without using EelLabel.

	* src/nautilus-sidebar-title.c: Remove unused header include.

2002-01-03  Darin Adler  <darin@bentspoon.com>

	* TODO: Updated.

	* libnautilus-private/nautilus-icon-canvas-item.c:
	(create_label_layout): Use eel_pango_layout_set_underline.

	* components/music/nautilus-music-view.c:
	Don't include EelList.

2002-01-03  Darin Adler  <darin@bentspoon.com>

	* libnautilus-private/nautilus-icon-container.c:
	(start_rubberbanding):
	Use GnomeCanvasRect instead of EelCanvasRect. We can redo the
	EelCanvasRect optimization if we want to, but it should really
	be put into libgnomecanvas.
	
	* components/music/common.c:
	* components/music/nautilus-music-view.c:
	* libnautilus-private/nautilus-customization-data.c:
	* libnautilus-private/nautilus-desktop-file-loader.c:
	* libnautilus-private/nautilus-directory-async.c:
	* libnautilus-private/nautilus-directory.c:
	* libnautilus-private/nautilus-file.c:
	* src/file-manager/fm-desktop-icon-view.c:
	* src/file-manager/fm-icon-view.c:
	* src/nautilus-property-browser.c:
	* src/nautilus-sidebar-title.c:
	* src/nautilus-window.c:
	Remove lots of unneeded includes, including all cases of
	including the locale-sensitive <ctype.h>.

2002-01-03  Darin Adler  <darin@bentspoon.com>

	* libnautilus-private/nautilus-global-preferences.c:
	(nautilus_global_preferences_init):
	* libnautilus-private/nautilus-sidebar-functions.c:
	(sidebar_panel_make_preference_key):